overflow fixed

--- a/style.css
+++ b/style.css
@@ -7,6 +7,9 @@ body {
     margin: 0;
     padding: 0;
     scroll-behavior: smooth;
+    box-sizing: border-box;
+    width: 100%;
+    overflow-x: hidden;
 }
 body::-webkit-scrollbar{
     display: none;
